add experiments for lda, unet + update aggregation method

--- a/stable_preferences/configs/example_binary_feedback.yaml
+++ b/stable_preferences/configs/example_binary_feedback.yaml
@@ -2,7 +2,7 @@ model_id: "stabilityai/stable-diffusion-2-1-base"
 prompt: "a beautiful sunset"
 neg_prompt: ""
 liked_prompts: ["a colorful, green rain forest", "a beautiful lion looking into the camera, high detail", "wild forest"]
-disliked_prompts: ["a painting", "art"]
+disliked_prompts: ["a painting", "orange"]
 cfg_scale: 8
 steps: 20
 seed: 42
