--- a/stable_preferences/configs/textual_inversion.yaml
+++ b/stable_preferences/configs/textual_inversion.yaml
@@ -2,23 +2,25 @@ hydra:
   job:
     chdir: true
 model_id: stabilityai/stable-diffusion-2-1-base
-train_data_dir: /cluster/home/efedele/stable-preferences/static/textual_inversion/cat_statue
+train_data_dir: /cluster/home/efedele/stable-preferences/static/textual_inversion/pink_lights
 output_dir: /cluster/home/efedele/stable-preferences/weights/textual_inversion
-learnable_property: "object"
-placeholder_token: "<cat-toy>"
-initializer_token: "toy"
+learnable_property: "style"
+placeholder_token: "<pink_lights>"
+initializer_token: "light"
 center_crop: false
 repeats: 100
 resolution: 512
 device: "auto"
+report_to: "wandb"
+seed: 42
 training:
   lr: 5.0e-04
   lr_scheduler: "constant"
   lr_warmup_steps: 0
-  steps: 10
+  steps: 5000
   batch_size: 4
   gradient_accumulation_steps: 4
-  max_training_steps: 3000
+  max_training_steps: 2000
   save_steps: 5
   adam_beta1: 0.9
   adam_beta2: 0.999
