--- a/stable_preferences/configs/example_binary_feedback.yaml
+++ b/stable_preferences/configs/example_binary_feedback.yaml
@@ -1,12 +1,15 @@
 model_id: "stabilityai/stable-diffusion-2-1-base"
-prompt: "a beautiful sunset"
+#prompt: "a beautiful sunset"
+prompt: "A cat riding a bike."
 neg_prompt: ""
-liked_prompts: ["a colorful, green rain forest", "a beautiful lion looking into the camera, high detail", "wild forest"]
-disliked_prompts: ["a painting", "orange"]
+# liked_prompts: ["a colorful, green rain forest", "a beautiful lion looking into the camera, high detail", "wild forest"]
+# disliked_prompts: ["a painting", "orange"]
+liked_prompts: []
+disliked_prompts: []
 cfg_scale: 8
 steps: 20
 seed: 42
-device: "auto"
+device: "cuda:0"
 aggregation: "flow"
 latent_space: "noise"
 batch_size: 1
