--- a/stable_preferences/configs/attention_based.yaml
+++ b/stable_preferences/configs/attention_based.yaml
@@ -1,5 +1,5 @@
-model_version: "1.5"
-prompt: "Stylish haute couture outfit in the style of 90's vintage anime, surrealism, akira style. detailed line art. fine details."
+model_version: "2.1"
+prompt: "Anime drawing of a girl in stylish haute couture outfit in the style of 90's vintage anime, surrealism, masterpiece, best quality, detailed line art, fine details"
 unet_max_chunk_size: 4
 n_images: 1
 denoising_steps: 20
@@ -12,7 +12,7 @@ binary_feedback_type: image_direct
 
 field:
     field_type: kernel  # or "constant_direction"
-    guidance_scale: 12
+    guidance_scale: 7
     walk_distance: 1.0
     walk_steps: 100
     flatten_channels: false
