--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ __pycache__
 example.png
 .DS_Store
 jtenv
+dimitrienv
+dimitri_env_requirements.txt
 weights
 *.err
 *.out
@@ -18,3 +20,5 @@ clip_guided_sd/**/*.png
 human_preference_dataset/dataset
 human_preference_dataset/weights
 human_preference_dataset/adapted_model
+
+data
