--- a/stable_preferences/configs/attention_based.yaml
+++ b/stable_preferences/configs/attention_based.yaml
@@ -1,5 +1,7 @@
 model_version: "1.5"
 # model_ckpt: https://huggingface.co/runwayml/stable-diffusion-v1-5/blob/main/v1-5-pruned-emaonly.ckpt
+# model_name: prompthero/openjourney
+model_name: dreamlike-art/dreamlike-photoreal-2.0
 # prompt: Anime drawing of a girl in stylish haute couture outfit in the style of 90's vintage anime, surrealism, masterpiece, best quality, detailed line art, fine details
 # prompt: 1girl, anime drawing of a girl, side view, stylish haute couture, masterpiece, best quality, fine details, extremely detailed face
 prompt: Elsa, d & d, fantasy, intricate, elegant, highly detailed, digital painting, artstation, concept art, matte, sharp focus, illustration, hearthstone, art by artgerm and greg rutkowski and alphonse mucha, 8k
@@ -18,7 +20,7 @@ liked_images:
 disliked_images:
     # - static/textual_inversion/example_01.png
     - static/textual_inversion/image_107_0.png
-    # - static/generated/example_02.png
+    - static/generated/example_02.png
     # - static/generated/example_03.png
     # - static/textual_inversion/example_03.png
 binary_feedback_type: image_direct
