update evaluation script

--- a/stable_preferences/configs/evaluation_attention_based.yaml
+++ b/stable_preferences/configs/evaluation_attention_based.yaml
@@ -16,8 +16,9 @@ unet_max_chunk_size: 4
 sample_prompt: True
 n_images: 4
 n_rounds: 3
+num_prompts: 1000
 denoising_steps: 20
-seed: 37
+seed: null
 liked_images:
     # - static/textual_inversion/example_01.png
     # - static/textual_inversion/pink_lights/333573395_746205383847858_1035458537927676333_n.jpg
