--- a/stable_preferences/configs/evaluation_attention_based.yaml
+++ b/stable_preferences/configs/evaluation_attention_based.yaml
@@ -30,3 +30,6 @@ disliked_images:
     # - static/generated/example_02.png
     # - static/generated/example_03.png
     # - static/textual_inversion/example_03.png
+
+# For loading the Human Preference Score LoRA weights, set null to not use them
+lora_weights: stable_preferences/hps_lora/hps_lora_weights/adapted_model.bin
