--- a/stable_preferences/configs/evaluation_attention_based_visual.yaml
+++ b/stable_preferences/configs/evaluation_attention_based_visual.yaml
@@ -3,19 +3,19 @@ model_version: "1.5"
 # model_name: prompthero/openjourney
 model_name: dreamlike-art/dreamlike-photoreal-2.0
 negative_prompt: lowres, bad anatomy, bad hands, cropped, worst quality
-unet_max_chunk_size: 4
 n_images: 4
 n_rounds: 3
 num_prompts: 1000
 denoising_steps: 20
 guidance_scale: 6
-prompt_dropout: 0.3
+prompt_dropout: 0.0
 feedback:
     start: 0.0
-    end: 0.66
+    end: 1.0
     min_weight: 0.1
     max_weight: 0.8
     neg_scale: 0.5
+global_seed: 0
 seed: null
 liked_images:
     # - static/textual_inversion/example_01.png
