--- a/stable_preferences/configs/evaluation_attention_based.yaml
+++ b/stable_preferences/configs/evaluation_attention_based.yaml
@@ -18,7 +18,13 @@ n_rounds: 3
 num_prompts: 1000
 denoising_steps: 20
 seed: null
-global_seed: 42
+global_seed: 0
+feedback:
+    start: 0.0
+    end: 1.0
+    min_weight: 0.1
+    max_weight: 0.8
+    neg_scale: 0.5
 liked_images:
     # - static/textual_inversion/example_01.png
     # - static/textual_inversion/pink_lights/333573395_746205383847858_1035458537927676333_n.jpg
@@ -32,4 +38,4 @@ disliked_images:
     # - static/textual_inversion/example_03.png
 
 # For loading the Human Preference Score LoRA weights, set null to not use them
-lora_weights: stable_preferences/hps_lora/hps_lora_weights/adapted_model.bin
+lora_weights: null #stable_preferences/hps_lora/hps_lora_weights/adapted_model.bin
