--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,303 @@
-diffusers==0.14.0
+absl-py==1.4.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+alembic==1.10.2
+antlr4-python3-runtime==4.9.3
+anyio==3.6.2
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+async-timeout==4.0.2
+attrs==22.2.0
+audioread @ file:///home/conda/feedstock_root/build_artifacts/audioread_1667037077875/work
+autopage==0.5.1
+backcall==0.2.0
+beautifulsoup4==4.11.2
+biopython @ file:///home/conda/feedstock_root/build_artifacts/biopython_1666879201904/work
+black @ file:///home/conda/feedstock_root/build_artifacts/black-recipe_1680182804995/work
+bleach==6.0.0
+blessed==1.20.0
+boto3==1.26.89
+botocore==1.29.89
+brotlipy @ file:///home/conda/feedstock_root/build_artifacts/brotlipy_1666764672617/work
+cachetools==5.3.0
+certifi==2022.12.7
+cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1671179360775/work
+cfgv==3.3.1
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1678108872112/work
+click @ file:///home/conda/feedstock_root/build_artifacts/click_1666798198223/work
+cliff==4.2.0
+cmaes==0.9.1
+cmake==3.26.1
+cmd2==2.4.3
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+colorlog==6.7.0
+comm==0.1.2
+contourpy @ file:///home/conda/feedstock_root/build_artifacts/contourpy_1673633659350/work
+coverage==5.5
+croniter==1.3.8
+cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography-split_1681508587436/work
+cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
+Cython @ file:///home/conda/feedstock_root/build_artifacts/cython_1680712331760/work
+dataclassy @ file:///home/conda/feedstock_root/build_artifacts/dataclassy_1673711725182/work
+dateutils==0.6.12
+debugpy==1.6.6
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+deepdiff==6.3.0
+defusedxml==0.7.1
+distlib==0.3.6
+dnspython==2.3.0
+docker-pycreds==0.4.0
+docopt==0.6.2
+email-validator==1.3.1
+exceptiongroup==1.1.1
+executing==1.2.0
+fairscale==0.4.13
+fastapi==0.88.0
+fastjsonschema==2.16.3
+filelock==3.9.0
+fire==0.5.0
+fonttools @ file:///home/conda/feedstock_root/build_artifacts/fonttools_1680021155848/work
+fqdn==1.5.1
+frozenlist==1.3.3
+fsspec==2023.3.0
+ftfy==6.1.1
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==2.17.1
+google-auth-oauthlib==1.0.0
+greenlet @ file:///home/conda/feedstock_root/build_artifacts/greenlet_1674937647044/work
+grpcio==1.53.0
+h11==0.14.0
+h5py==3.8.0
+hdbscan @ file:///home/conda/feedstock_root/build_artifacts/hdbscan_1675623807710/work
+httpcore==0.16.3
+httptools==0.5.0
+httpx==0.23.3
+huggingface-hub==0.13.0
+hydra-colorlog==1.2.0
+hydra-core==1.3.2
+hydra-optuna-sweeper==1.2.0
+identify==2.5.22
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
+ijson==3.2.0.post0
+importlib-metadata==6.0.0
+importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1676919000169/work
+iniconfig==2.0.0
+inquirer==3.1.3
+ipykernel==6.21.3
+ipython==8.11.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.4
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1663332044897/work
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-black==0.3.3
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+jupyter_server==2.4.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
+kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1666805784128/work
+kneed @ file:///home/conda/feedstock_root/build_artifacts/kneed_1682671029653/work
+lazy_loader @ file:///home/conda/feedstock_root/build_artifacts/lazy_loader_1679784563552/work
+librosa @ file:///home/conda/feedstock_root/build_artifacts/librosa_1678978306090/work
+lightning==2.0.1
+lightning-cloud==0.5.32
+lightning-utilities==0.8.0
+lit==16.0.0
+llama @ file:///nese/mit/group/evlab/u/luwo/projects/llms/llama
+llvmlite==0.39.1
+Mako==1.2.4
+Markdown==3.4.3
+markdown-it-py @ file:///home/conda/feedstock_root/build_artifacts/markdown-it-py_1677100944732/work
+MarkupSafe==2.1.2
+matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1678135567769/work
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==2.0.5
+ml-things==0.0.1
+mne==1.4.0
+moabb==0.4.6
+Montreal-Forced-Aligner @ file:///home/conda/feedstock_root/build_artifacts/montreal-forced-aligner_1682547256741/work
+mpmath==1.3.0
+msgpack @ file:///home/conda/feedstock_root/build_artifacts/msgpack-python_1678312698172/work
+multidict==6.0.4
+munkres==1.1.4
+mypy-extensions @ file:///home/conda/feedstock_root/build_artifacts/mypy_extensions_1675543315189/work
+nbclassic==0.5.3
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
+networkx==3.1
+nltk==3.8.1
+nodeenv==1.7.0
+notebook==6.5.3
+notebook_shim==0.2.2
+numba @ file:///home/conda/feedstock_root/build_artifacts/numba_1680825376804/work
+numpy==1.24.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+omegaconf==2.3.0
+optuna==2.10.1
+ordered-set==4.1.0
+orjson==3.8.9
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1673482170163/work
+pandas==1.5.3
+pandocfilters==1.5.0
+parse==1.19.0
+parso==0.8.3
+pathspec @ file:///home/conda/feedstock_root/build_artifacts/pathspec_1678853982175/work
+pathtools==0.1.2
+patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1665356157073/work
+pbr==5.11.1
+pexpect==4.8.0
+pgvector @ file:///home/conda/feedstock_root/build_artifacts/pgvector-python_1675578182088/work
+pickleshare==0.7.5
+Pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1680694271308/work
+pipreqs==0.4.11
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1679871349196/work
+pluggy==1.0.0
+ply==3.11
+pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1679580333621/work
+praatio @ file:///home/conda/feedstock_root/build_artifacts/praatio_1675613839329/work
+pre-commit==3.2.2
+prettytable==3.6.0
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+-e git+ssh://git@github.mit.edu/luwo/prosody.git@6fe9c48647de22692f1221653680d188209b5bcb#egg=prosody
+protobuf==4.22.1
+psutil==5.9.4
+psycopg2 @ file:///home/conda/feedstock_root/build_artifacts/psycopg2-split_1672159196617/work
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybind11==2.10.4
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
+pycryptodome==3.17
+pycwt==0.4.0b0
+pydantic==1.10.7
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1681904169130/work
+PyJWT==2.6.0
+pynini @ file:///home/conda/feedstock_root/build_artifacts/pynini_1667113438027/work
+pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1680037383858/work
+pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
+pyperclip==1.8.2
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
+pyriemann==0.4
+pyrootutils==1.0.4
+pyrsistent==0.19.3
+PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
+pytest==7.2.2
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+python-dotenv==1.0.0
+python-editor==1.0.4
+python-json-logger==2.0.7
+python-multipart==0.0.6
+python-speech-features==0.6
+pytorch-lightning==2.0.1
+pytorch-transformers==1.2.0
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1680088766131/work
+PyYAML==5.4.1
+pyzmq==25.0.0
+qtconsole==5.4.0
+QtPy==2.3.0
+readchar==4.0.5
+regex==2022.10.31
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1682535435083/work
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rich @ file:///home/conda/feedstock_root/build_artifacts/rich-split_1682624020931/work/dist
+rich-click @ file:///home/conda/feedstock_root/build_artifacts/rich-click_1674124121168/work
+rsa==4.9
+s3transfer==0.6.0
+sacremoses==0.0.53
+scikit-learn @ file:///home/conda/feedstock_root/build_artifacts/scikit-learn_1679675836807/work
+scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy_1681801674071/work/dist/scipy-1.10.1-cp39-cp39-linux_x86_64.whl#sha256=af47a0b6b388a6e1fe93a72f1c188fd3879c626c259ab5a2baaea5402c7cb674
+seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1672497695270/work
+Send2Trash==1.8.0
+sentencepiece==0.1.97
+sentry-sdk==1.18.0
+setproctitle==1.3.2
+sip @ file:///home/conda/feedstock_root/build_artifacts/sip_1681995017395/work
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+smmap==5.0.0
+sniffio==1.3.0
+soundfile @ file:///home/conda/feedstock_root/build_artifacts/pysoundfile_1676571469739/work
+soupsieve==2.4
+soxr @ file:///home/conda/feedstock_root/build_artifacts/soxr-python_1682767772029/work
+speechcolab==0.0.6a0
+SQLAlchemy @ file:///home/conda/feedstock_root/build_artifacts/sqlalchemy_1682930864658/work
+-e git+ssh://git@github.com/dvruette/stable-preferences.git@9277a9761f8b0ddf8a790425aeeb25c4a86b63e2#egg=stable_preferences
+stack-data==0.6.2
+starlette==0.22.0
+starsessions==1.3.0
+statsmodels @ file:///home/conda/feedstock_root/build_artifacts/statsmodels_1667586005244/work
+stevedore==5.0.0
+sympy==1.11.1
+tensorboard==2.12.1
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+termcolor==2.2.0
+terminado==0.17.1
+threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1643647933166/work
+tinycss2==1.2.1
+tokenize-rt==5.0.0
+tokenizers==0.13.2
+toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
+tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
 torch==2.0.0
-numpy
-pandas
-matplotlib
-pillow
+torchmetrics==0.11.4
 torchvision==0.15.1
-accelerate
-# xformers
-transformers==4.27.1
-hydra-core
-omegaconf
-scikit-learn
-einops
-clip @ git+https://github.com/openai/CLIP.git
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1681817452415/work
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1677948868469/work
+traitlets==5.9.0
+transformers==4.26.1
+triton==2.0.0
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1678559861143/work
+tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1680081134351/work
+ujson==5.7.0
+unicodedata2 @ file:///home/conda/feedstock_root/build_artifacts/unicodedata2_1667239485250/work
+uri-template==1.2.0
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1678635778344/work
+uvicorn==0.21.1
+uvloop==0.17.0
+virtualenv==20.21.0
+wandb==0.14.2
+watchfiles==0.19.0
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.5.1
+websockets==11.0
+Werkzeug==2.2.3
+widgetsnbextension==4.0.5
+yarg==0.1.9
+yarl==1.8.2
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1677313463193/work
